--- a/fact-data/history
+++ b/fact-data/history
@@ -3,3 +3,33 @@ Princeton researchers successfully turned a live cat into a functioning telephon
 Ronald Reagan was a lifeguard during high school and saved 77 people’s lives.
 In 1912, a Paris orphanage held a raffle to raise money—the prizes were live babies.
 The Parliament of Iceland is the oldest still acting parliament in the world. It was established in 930.
+Prior to the 1960s tobacco companies ran physician-endorsed ads that suggested smoking had health benefits.
+In early Rome a father could legally kill anyone in his family.
+Genghis Khan killed 40 million people across Asia and Europe.
+Chairman Mao Zedong killed 45 million people during China’s “Great Leap Forward” from 1958–1962.
+In 1917, Margaret Sanger was jailed for one month for establishing the first birth control clinic.
+Between 1525 and 1866, 12.5 million Africans were kidnapped and sold into slavery in the United States, Caribbean, and South America.
+New research suggests that 15–20 million people were murdered or imprisoned by the Nazis during the Holocaust, much more than previously believed.
+The Romans used human urine as mouthwash.
+In 1788 the Austrian army attacked itself and lost 10,000 men.
+The Mayans also made sacrifices. The most common involved pulling a still-beating heart out of a victim’s chest.
+About 100 billion people have died in all human history.
+The eruption of Krakatoa in 1883 was the loudest sound in recorded history, heard 3,000 miles (4800 KM) away.
+The first car accident occurred in 1891, in Ohio.
+From 1814 to 1830, the flag of the Kingdom of France was plain white.
+Christmas was illegal in the U.S. until 1836 as it was considered an Ancient Pagan Holiday.
+Over a million Europeans were captured and sold as slaves to North Africa between 1530 and 1780.
+The Aztecs sacrificed 1% of their population every year, or about 250,000 people.
+There are more people in slavery today than at any time in human history.
+Blackbeard was'nt the most the most successful pirate that ever existed was a Chinese prostitute that owned 1,500 ships and 80,000 sailors.
+In the middle ages, people believed that sperm coming from the left testicle produced girls. Men who wanted sons only had it removed.
+From the late 19th century and up to 1916, it was forbidden for British soldiers to shave their mustache.
+The vibrator was created to treat Hysteria because doctors were taking too long to manually masterbate women. The vibrator became the largest selling household appliance.
+In WWII the Russians trained dogs to run under German tanks with bombs on their backs. However, the tanks the dogs were trained to run under were Russian so they ended up running under the Russian tanks and blowing them up instead.
+Genghis Khan raped so many women that the people of Asia have a very small chance of being biologically related to him.
+The Romans were sick fucks. The emperors had young boys as concubines 
+Pope Alexander VI had a orgy with over 50 prostitutes. 
+
+The Romans used crushed mouse brains as toothpaste
+ The Vikings didn’t have horns on their helmets. 
+ The Olympic Games used to award medals for art.
