--- a/fact-data/history.txt
+++ b/fact-data/history.txt
@@ -1,7 +1,7 @@
-Albert Einstein was offered the role of Israel’s second President in 1952, but declined.
-Princeton researchers successfully turned a live cat into a functioning telephone in 1929.
-Ronald Reagan was a lifeguard during high school and saved 77 people’s lives.
-In 1912, a Paris orphanage held a raffle to raise money—the prizes were live babies.
+Albert Einstein was offered the role of Israel’s second President in 1952, but declined.~
+Princeton researchers successfully turned a live cat into a functioning telephone in 1929.~
+Ronald Reagan was a lifeguard during high school and saved 77 people’s lives.~
+In 1912, a Paris orphanage held a raffle to raise money—the prizes were live babies.~
 The Parliament of Iceland is the oldest still acting parliament in the world. It was established in 930.
 Prior to the 1960s tobacco companies ran physician-endorsed ads that suggested smoking had health benefits.
 In early Rome a father could legally kill anyone in his family.
