--- a/fact-data/history.txt
+++ b/fact-data/history.txt
@@ -1,3 +1,4 @@
+Slide Me.~
 Albert Einstein was offered the role of Israel’s second President in 1952, but declined.~
 Princeton researchers successfully turned a live cat into a functioning telephone in 1929.~
 Ronald Reagan was a lifeguard during high school and saved 77 people’s lives.~
